# seam

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SEAM_PRD.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: agent-skills.md  benchmarks.md  install.md  release.md  seam.schema.json
docs/superpowers/specs/: 2026-06-04-seam-design.md
npm/seam-skill/: README.md  package.json
npm/seam-skill/skills/seam-code-search/: SKILL.md
npm/seam-skill/skills/seam-code-search/agents/: openai.yaml
packaging/homebrew/: seam-index.rb
scripts/: benchmark.py
seam/: __init__.py  chunker.py  cli.py  config.py  context.py  doctor.py  embeddings.py  indexer.py  mcp_server.py  models.py  portability.py  search.py  skill_installer.py  storage.py  watch.py
site/: DESIGN.md  PRODUCT.md  package.json
site/app/: globals.css  layout.tsx  page.tsx
site/public/: install.sh
skills/seam-code-search/: SKILL.md
tests/: test_agent_skill_assets.py  test_backends_and_merkle.py  test_chunker.py  test_cli.py  test_context.py  test_doctor.py  test_index_search.py  test_install_assets.py  test_install_skill_command.py  test_portability.py  test_skill_assets.py
